--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -1,3 +1,14 @@
-* {
-    margin: 10px;
-  }
+.container {
+  position: relative;
+  min-height: 100vh;
+}
+
+.content {
+  padding-bottom: 60px; 
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
