--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
   position: relative;
   min-height: 100vh;
 }
@@ -12,4 +12,4 @@ footer {
   bottom: 0;
   width: 100%;
 }
-
+ */
